                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 14-03-2006 added: more exception handling in dvdplayer and generic exception handling in most threads, onexit will be called on an exception in process
 - 14-03-2006 fixed: some chapters from ogg files may not play
 - 14-03-2006 fixed: mt-daapd 0.2.4 now supported
 - 14-03-2006 fixed: daap now uses mPlayer for playback (faster start time)
 - 14-03-2006 fixed: [ 1448284 ] No hidden pass when unlock
 - 14-03-2006 added: You can activate specific parts of the Kai window using ActivateWindow(XLinkKai,part) where part is Chat,Games,Buddies or Arenas.
 - 14-03-2006 fixed: possible wrong xbe region stored in program database (update myprograms6.db)
 - 14-03-2006 changed: All strings/labels are internally UTF-8 now.  Will almost certainly require rescanning the databases if you use a non-Ascii charset.
 - 13-03-2006 changed: volume and seekbar speed is now independent on fps. at full speed 0-100% now takes 1 second.
 - 13-03-2006 updated: Icelandic language file (Thnx to kristjan)
 - 13-03-2005 updated: Spanish language file (Thnx to chevi)
 - 13-03-2006 updated: French language file (Thnx to modhack)
 - 13-03-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 13-03-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 13-03-2006 updated: German language file
 - 13-03-2006 updated: Dutch language file (Thnx to console-ombouw)
 - 13-03-2006 updated: Portuguese (Brazil) language file (Thnx to mvbm)
 - 13-03-2006 updated: Swedish language file (Thnx to blittan)
 - 13-03-2006 updated: Norwegian language file (Thnx to vnm)
 - 13-03-2006 added: Filename, time, playcount and tracknumber to Smart playlists.